--- a/app/src/main/res/layout/layout_row.xml
+++ b/app/src/main/res/layout/layout_row.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:id="@+id/layout_row"
+
+    >
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="40dp">
 
@@ -17,16 +21,17 @@
 
         <TextView
             android:id="@+id/Number_of_medals"
-            android:layout_width="159dp"
-            android:layout_height="match_parent"
-            android:gravity="center_horizontal|center_vertical"
-            android:text="TextView" />
+            android:layout_width="135dp"
+            android:layout_height="65dp"
+            android:gravity="center|center_horizontal|end"
+            android:text="TextView"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
     <TextView
         android:id="@+id/IOC_code"
-        android:layout_width="253dp"
+        android:layout_width="278dp"
         android:layout_height="33dp"
         android:text="TextView" />
 
