--- a/app/src/main/res/layout/layout_row.xml
+++ b/app/src/main/res/layout/layout_row.xml
@@ -13,14 +13,14 @@
         android:layout_height="40dp">
 
         <TextView
-            android:id="@+id/Country"
+            android:id="@+id/country"
             android:layout_width="25dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/Number_of_medals"
+            android:id="@+id/num_of_medals"
             android:layout_width="135dp"
             android:layout_height="65dp"
             android:gravity="center|center_horizontal|end"
